<resources>
    <string name="app_name">Free for Fun?</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="mobileNumber">Phone Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="editProfile">Edit My Profile</string>

    <string name="register_now">Register now?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="ok">Ok</string>
    <string name="invalid_username_or_password">Invalid username or password!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_profile_details">Profile details</string>
    <string name="menu_update_profile">Update profile</string>
    <string name="menu_change_password">Change password</string>
    <string name="menu_profile_settings">Profile settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_application_options">Application options</string>
    <string name="menu_locals">Locals</string>
    <string name="menu_choose_language">Choose language</string>
    <string name="logout">Logout</string>
    <string name="send_email">Send email</string>
    <string name="recover_password">Recover password</string>
    <string name="old_password">Old password</string>
    <string name="confirm_old_password">Confirm old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change password</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_log_out_from_the_application">Are you sure you want to log out from the application?</string>
    <string name="forgot_password_type_in_your_email_to_get_your_password_back">Forgot password? Type in your email to get your password back!</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="your_account_will_e_deleted_permanently_are_you_sure_you_want_to_continue">Your account will be deleted permanently. Are you sure you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="filter_locals">
        <item>Restaurant</item>
        <item>Pub</item>
        <item>Club</item>
        <item>Terrace</item>
        <item>Confectiontery</item>
        <item>Fast-Food</item>
        <item>Canteen</item>
        <item>Pizzeria</item>
        <item>Sky-bar</item>
    </string-array>
    <string name="title_activity_local">LocalActivity</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="mobile_number">Mobile number</string>
    <string name="timetable">Timetable</string>
    <string name="type">Type</string>
    <string name="make_reservation">Make reservation</string>
    <string name="see_reservations">See future reservations</string>
    <string name="number_persons">Nr. Persons</string>
    <string name="choose_reservation_type">Reservation type</string>
    <string name="choose_local">Choose local</string>
    <string name="create_reservation">Create reservation</string>
    <string name="choose_date">Choose date</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="see_past_reservations">See past reservations</string>
    <string name="favourite_locals">Favourite locals</string>
    <string name="local_name">Local name</string>
    <string name="local_address">Local address</string>
    <string name="contact_number">Contact number</string>
    <string name="number_of_persons">Number of persons</string>
    <string name="date_and_time">Date and time</string>
    <string name="free_tables_now">Free tables now</string>

</resources>