<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_see_locals">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.freeforfun.ui.login.ui.profile.UserProfileFragment"
        android:label="@string/menu_profile_details"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/nav_update"
        android:name="com.example.freeforfun.ui.login.ui.editProfile.EditProfileFragment"
        android:label="@string/menu_update_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/nav_see_locals"
        android:name="com.example.freeforfun.ui.login.ui.seeLocals.LocalsFragment"
        android:label="@string/menu_locals"
        tools:layout="@layout/fragment_locals" />

    <fragment
        android:id="@+id/nav_change_language"
        android:name="com.example.freeforfun.ui.login.ui.changeLanguage.ChangeLanguageFragment"
        android:label="@string/menu_choose_language"
        tools:layout="@layout/fragment_change_language" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.example.freeforfun.ui.login.ui.changePassword.ChangePasswordFragment"
        android:label="@string/menu_change_password"
        tools:layout="@layout/fragment_change_password" />

    <fragment
        android:id="@+id/nav_make_reservation"
        android:name="com.example.freeforfun.ui.login.ui.makeReservation.ReservationFragment"
        android:label="Make reservation"
        tools:layout="@layout/reservation_fragment" />

    <fragment
        android:id="@+id/nav_see_reservations"
        android:name="com.example.freeforfun.ui.login.ui.seeReservations.ReservationsFragment"
        android:label="My future reservations"
        tools:layout="@layout/reservations_fragment" />

    <fragment
    android:id="@+id/nav_past_reservations"
    android:name="com.example.freeforfun.ui.login.ui.seeHistoryReservations.PastReservationsFragment"
    android:label="My past reservations"
    tools:layout="@layout/past_reservations_fragment" />

    <fragment
        android:id="@+id/nav_favourite_locals"
        android:name="com.example.freeforfun.ui.login.ui.favouriteLocals.FavouriteLocalsFragment"
        android:label="My favourite locals"
        tools:layout="@layout/favourite_locals_fragment" />
</navigation>