<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ui.login.DeleteAccountActivity">

    <TextView
        android:id="@+id/text_logoutPopup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/your_account_will_e_deleted_permanently_are_you_sure_you_want_to_continue"
        android:textColor="#A9A9A9"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/btn_cancelLogout"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/yes"
        android:textColor="#A9A9A9"
        android:onClick="deleteAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_okLogout"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:text="@string/no"
        android:textColor="#A9A9A9"
        android:onClick="cancelDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>