<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="270dp"
        android:layout_height="75dp"
        android:backgroundTint="#ffffff"
        android:layout_marginTop="180dp"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        app:errorEnabled="true"
        />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="270dp"
        android:layout_height="75dp"
        android:backgroundTint="#ffffff"
        android:clickable="true"
        android:drawableStart="@drawable/password"
        android:drawableLeft="@drawable/password"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:errorEnabled="true" />

    <EditText
        android:id="@+id/reNewPassword"
        android:layout_width="270dp"
        android:layout_height="75dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        app:errorEnabled="true"
        android:backgroundTint="#ffffff"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        />

    <Button
        android:id="@+id/button_changePass"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:text="@string/change_password"
        android:textColor="#ffffff" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>