<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient">

    <ImageView
        android:layout_width="253dp"
        android:layout_height="233dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="270dp"
        android:layout_height="65dp"
        android:paddingBottom="10dp"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/username"
        android:backgroundTint="#ffffff"
        android:hint="@string/username"
        android:drawableStart="@drawable/username"
        app:errorEnabled = "true"
        android:focusable="true"
        android:clickable="true"
        android:focusableInTouchMode="true"
        />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="270dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:hint="@string/password"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:inputType="textPassword"
            android:backgroundTint="#ffffff"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            app:errorEnabled="true"
            android:focusable="true"
            android:clickable="true"
            android:focusableInTouchMode="true"/>

    <ImageView
        android:id="@+id/show_password_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="70dp"
        android:layout_marginTop="50dp"
        android:alpha=".3"
        android:onClick="showHidePassword"
        android:padding="3dp"
        android:src="@drawable/showpassword" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:layout_marginTop="27dp"
        android:text="@string/login"
        android:onClick="login"
        />

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
        <TextView
            android:id="@+id/textView_register"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:paddingTop="13dp"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textSize="19dp"
            android:text="@string/register_now" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:paddingTop="13dp"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textSize="19dp"
            android:text="@string/forgot_password" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView_log"
        android:layout_width="250dp"
        android:layout_height="40dp"/>
</LinearLayout>