<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.ui.makeReservation.ReservationFragment"
    android:background="@drawable/gradient"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/coordinatorLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity"
        android:orientation="vertical"
        android:weightSum="3"
        android:gravity="center_horizontal"
        android:background="@drawable/gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/choose_local"
            android:textColor="@color/whiteStart"
            android:layout_gravity="left"
            android:layout_marginLeft="40dp"
            android:textSize="25sp" />

        <Spinner
        android:id="@+id/localChooser"
        android:layout_width="190dp"
        android:layout_height="40dp"
            android:textColor="#ffffff"
            android:background="@drawable/spinner"
            android:layout_marginTop="6dp"
            android:layout_gravity="left"
            android:layout_marginLeft="40dp"
        android:textSize="20sp"
        android:spinnerMode="dropdown"/>

    <EditText
        android:id="@+id/editText_nrPersons"
        android:layout_width="190dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="40dp"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/people"
        android:backgroundTint="#ffffff"
        android:textSize="25sp"
        android:hint="@string/number_persons"
        android:drawableStart="@drawable/people"
        app:errorEnabled = "true"
        android:focusable="true"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:inputType="number"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/choose_reservation_type"
        android:textSize="25sp"
        android:layout_gravity="left"
        android:textColor="@color/whiteStart"
        />

    <Spinner
        android:id="@+id/typeChooser"
        android:layout_height="40dp"
        android:layout_width="190dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/spinner"
        android:layout_gravity="left"
        android:textColor="#ffffff"
        android:spinnerMode="dropdown"/>

        <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
        android:text="@string/date"
        android:textSize="25sp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="left"
            android:textColor="@color/whiteStart"
        />
        <Button
            android:id="@+id/button_date"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:background="@drawable/button"
            android:text="Open date picker"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="6dp"
            android:layout_gravity="left"
            />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hour"
            android:textSize="25sp"
            android:layout_gravity="left"
            android:layout_marginLeft="40dp"
            android:textColor="@color/whiteStart"
            />
        <Button
            android:id="@+id/button_time"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_gravity="left"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/button"
            android:text="Open time picker"
            />

        <Button
            android:id="@+id/button_reservation"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_gravity="left"
            android:layout_marginLeft="110dp"
            android:background="#ffffff"
            android:text="@string/create_reservation"
            android:textColor="#4a00e0"
            />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>