<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.ForgotPasswordActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient"
    android:id="@+id/coordinatorLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
    <ImageView
        android:layout_width="253dp"
        android:layout_height="233dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_forgotPassword"
            android:paddingTop="30dp"
            android:gravity="left"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:maxLines="4"
            android:lines="2"
            android:textColor="#ffffff"
            android:paddingLeft="70dp"
            android:paddingRight="40dp"
            android:textSize="19dp"
            android:text="@string/forgot_password_type_in_your_email_to_get_your_password_back" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText_emailForgotPassword"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:paddingBottom="10dp"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:drawableLeft="@drawable/email1"
        android:backgroundTint="#ffffff"
        android:hint="@string/email"
        android:drawableStart="@drawable/email1"
        app:errorEnabled = "true"
        android:focusable="true"
        android:clickable="true"
        android:focusableInTouchMode="true"
        />

    <Button
        android:id="@+id/button_forgotPass"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/button"
        android:text="@string/recover_password"
        android:textColor="#ffffff"
        android:onClick="forgotPassword"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>